# sicp-haskell

./: .gitignore  DB.hs  LICENSE  LispParser.hs  Main.hs  README.md  SICP.cabal  data.txt  db.hs  test.hs
app/: Main.hs
src/SICP/: DB.hs  LispParser.hs
test/: test.hs
