
name:                SICP
version:             0.1.0.0
synopsis:            Exercises from SICP in Haskell
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Aleksey Makarov
maintainer:          aleksey.makarov@gmail.com
copyright:           2015 Aleksey Makarov
category:            Education
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

executable SICP
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:	Haskell2010
  build-depends:       base, parsec, pretty, tasty, tasty-quickcheck,
                       transformers, pipes, multiset, containers, HUnit, text,
                       tasty-hunit, haskeline, QuickCheck,
                       SICP

library
  hs-source-dirs:      src
  exposed-modules:     SICP.DB, SICP.LispParser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  build-depends:       base, transformers, pipes, containers, tasty,
                       tasty-hunit, parsec, text, QuickCheck, pretty

test-suite test
  hs-source-dirs:      test
  Main-is:             test.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  build-depends:       base, tasty, pipes, multiset, containers, HUnit, text,
                       parsec, pretty, tasty-hunit, tasty-quickcheck, SICP

--
--executable test-stack-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , test-stack
--  default-language:    Haskell2010
--
--test-suite test-stack-test
--  type:                exitcode-stdio-1.0
--  main-is:             Spec.hs
--  build-depends:       base
--                     , test-stack
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/feumilieu/sicp-haskell
